Change status codes and response on login
